tests/httproute-template.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test-$SUFFIX
spec:
  hostnames:
  - '$TEST_HOST'
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: $TEST_PATH
    backendRefs:
    - name: test
      port: 80
