tests/ingress-template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-$SUFFIX
spec:
  rules:
  - host: '$TEST_HOST'
    http:
      paths:
      - path: $TEST_PATH
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 80
